--- a/docs/pages/foundations/visibility.mdx
+++ b/docs/pages/foundations/visibility.mdx
@@ -86,7 +86,7 @@ Use `.visually-hidden` to show for screenreaders, but hide visually. Useful for 
 
 ## Hide from screenreaders
 
-Use `aria-hidden="true"` to hide content from screenreaders but show it visually. Useful for purely visual elements (e.g. icons) that don’t have any meaningful, semantic content.
+Use `aria-hidden="true"` to hide content from screenreaders but show it visually. Useful for purely visual elements (e.g. icons) that don't have any meaningful, semantic content.
 
 ## Show on focus
 
