NDS-377 Correct typos

--- a/docs/pages/foundations/typography.mdx
+++ b/docs/pages/foundations/typography.mdx
@@ -342,7 +342,7 @@ Standard spacing applied by default.
 
 ##### Loose
 
-Use .list--loose to apply more spacing between list items.
+Use `.list--loose` to apply more spacing between list items.
 
 <Example>
 <h5>Example: loose list spacing</h5>
@@ -390,7 +390,7 @@ Change the font to either a Serif font (Lora), sans-serif font (Inter) or monosp
 
 Change the visual appearance of a heading while keeping the page structure in tact. For example a heading level 3 (H3) might be too large for a certain layout, you can style as a heading level 4 (h4) instead to reduce the size.
 
-Use classes like .h2, .h3 to apply. For example:
+Use classes like `.h2` or `.h3` to apply. For example:
 
 ```html
 <h2 class="h3"> A h2 styled to look like a h3 </h2>
