NDS-377 Address snag list

--- a/docs/pages/components/table.mdx
+++ b/docs/pages/components/table.mdx
@@ -34,7 +34,9 @@ Don't use tables instead of a graph to display data visually. Graphs work when y
 
 Use the `<caption>` element to describe a table in the same way you would use a heading. A caption helps users find, navigate and understand tables.
 
-> The advantage of a caption over a heading is that it is read out when a screen reader user encounters the table directly, using the T shortcut key. [https://inclusive-components.design/data-tables/](https://inclusive-components.design/data-tables/)
+<blockquote className="quote">
+The advantage of a caption over a heading is that it is read out when a screen reader user encounters the table directly, using the T shortcut key. [https://inclusive-components.design/data-tables/](https://inclusive-components.design/data-tables/)
+</blockquote>
 
 Where there is already a requirement for a heading in the page content, and you want to eliminate repetition and redundancy, you can place the header _inside_ the `<caption>` element.
 
