--- a/docs/pages/prototyping.mdx
+++ b/docs/pages/prototyping.mdx
@@ -22,7 +22,7 @@ Our design components and settings are available as Adobe XD and Axure RP files.
 
 HTML is best for advanced functionality, complex logic or to simulate the most realistic user experience, for example when testing for accessibility.
 
-HTML prototypes currently need developer support to setup. [Contact the Design System team](mailto:NICE_Service_Manual@nice.org.uk) to see how we can help with this.
+HTML prototypes currently need developer support to setup. [Contact the Design System team](mailto:designsystem@nice.org.uk) to see how we can help with this.
 
 ## How to set up Axure RP
 
@@ -91,6 +91,6 @@ Building designs in HTML is the most realistic and accessible experience for tes
 Accessibility testing with assistive technologies. Testing of responsive design and layouts across viewports. Testing advanced interactions that would be too difficult or time-consuming to build in a design tool.
 
 #### Tools to use
-HTML prototypes will need support from developers to setup and build. [Contact the team](mailto:NICE_Service_Manual@nice.org.uk) if you think this is something you need.
+HTML prototypes will need support from developers to setup and build. [Contact the team](mailto:designsystem@nice.org.uk) if you think this is something you need.
 
 export default ({ children }) => <DefaultLayout meta={meta}>{children}</DefaultLayout>;
