NDS-385 Add remaining prototyping assets

--- a/docs/pages/prototyping.mdx
+++ b/docs/pages/prototyping.mdx
@@ -15,8 +15,8 @@ Our design kits support single page mockups, low and high-fidelity prototypes an
 
 Our design components and settings are available as Adobe XD and Axure RP files.
 
-- [Adobe XD - Design System UI kit](/docs/NICE-Design-System.xd)
-- Axure RP - Design System UI kit (currently getting assembled - will arrive next week, sorry for the hold up)
+- [Adobe XD - Design System UI kit](/assets/NICE-Design-System.xd)
+- [Axure RP - Design System UI kit](/assets/NICE-Design-System-v1.0.rplib)
 
 ## HTML
 
