--- a/docs/pages/community/proposing-a-component.mdx
+++ b/docs/pages/community/proposing-a-component.mdx
@@ -15,13 +15,13 @@ What problem are you looking to solve? Check to see if anything already exists i
 
 ### 2. Desk research
 
-If you cannot find a solution in the design system, look at how other organisations address this problem. Look at other websites and consider existing methods, best practice, and evidence. This is called desk research.
+If you cannot find a solution in the design system, look at how other organisations address this problem. Look at other websites and consider existing methods, best practice, and evidence. This is called [desk research](https://www.nngroup.com/articles/secondary-research-in-ux/).
 
 ### 3. Submit your proposal
 
-<Link href="/community/requesting-a-component/">Request a component or pattern</Link>
+<Link className="btn" href="/community/requesting-a-component/">Request a component or pattern</Link>
 
-The [component criteria](/community/component-criteria) will help you understand what we look for in a proposal.
+The <Link href="/community/component-criteria/">component criteria</Link> will help you understand what we look for in a proposal.
 
 ## What we do
 
@@ -37,7 +37,7 @@ User experience designers will develop initial prototypes for the component by c
 
 The designs will be critiqued by the team to generate assumptions and hypotheses for user research. The team will use the decision and actions log to record next steps.
 
-User research will be carried out to generate more evidence to ensure the proposal meets user’s needs.
+User research will be carried out to generate more evidence to ensure the proposal meets user's needs.
 
 ### 6. Development and technical testing
 
@@ -55,6 +55,6 @@ The component will be published into the NICE design system and used where neces
 
 The design system team will give updates on what's changed at the NICE design system show and tell.
 
-Updates will also be posted on the Design System homepage, on GitHub and via our [Teams channel](https://teams.microsoft.com/l/team/19%3aj3x65ql6djS-Ro2mM8yQIRzK_QHOk1S3Jl75got7hwk1%40thread.tacv2/conversations?groupId=10c92ff2-b41f-42d1-abef-f34f5bfe1202&tenantId=6030f479-b342-472d-a5dd-740ff7538de9).
+Updates will also be posted on the <Link href="/">Design System homepage</Link>, on [GitHub](https://github.com/nice-digital/nice-design-system) and via our [Teams channel](https://teams.microsoft.com/l/team/19%3aj3x65ql6djS-Ro2mM8yQIRzK_QHOk1S3Jl75got7hwk1%40thread.tacv2/conversations?groupId=10c92ff2-b41f-42d1-abef-f34f5bfe1202&tenantId=6030f479-b342-472d-a5dd-740ff7538de9).
 
 export default ({ children }) => <StackedNavLayout meta={meta}>{children}</StackedNavLayout>;
