--- a/docs/pages/community/requesting-a-component.mdx
+++ b/docs/pages/community/requesting-a-component.mdx
@@ -10,9 +10,9 @@ Send proposals to: [design-system@nice.org.uk](mailto:design-system@nice.org.uk)
 
 Please answer the following in your email:
 
-- Does the component or pattern already exist? (If yes please tell us the name)
-- Briefly describe the problem you are trying to solve with this new proposal
-- Briefly describe any user needs or business needs you have identified and how you went about identifying them
+- Does the component or pattern already exist? (If yes please tell us the name).
+- Briefly describe the problem you are trying to solve with this new proposal.
+- Briefly describe any user needs or business needs you have identified and how you went about identifying them.
 - Why would it be valuable to make this change on the NICE website?
 
 Attach any relevant files to your email that could support your proposal.
