NDS-397 Correct email address on "request a component" page

--- a/docs/pages/community/requesting-a-component.mdx
+++ b/docs/pages/community/requesting-a-component.mdx
@@ -6,7 +6,7 @@ export const meta = {
 	menu: CommunityMenu
 };
 
-Send proposals to: [design-system@nice.org.uk](mailto:design-system@nice.org.uk)
+Send proposals to: [designsystem@nice.org.uk](mailto:designsystem@nice.org.uk)
 
 Please answer the following in your email:
 
