--- a/docs/pages/components/page-header.mdx
+++ b/docs/pages/components/page-header.mdx
@@ -1,6 +1,6 @@
 import { ComponentLayout } from "components/layouts/ComponentLayout";
 import { Example } from "components/examples/Example";
-import { DefaultHeader, PreHeader, LeadHeader, MetadataHeader, CTAHeader } from "components/examples/PageHeader";
+import { DefaultHeader, PreHeader, LeadHeader, MetadataHeader, CTAHeader, FullWidthHeader } from "components/examples/PageHeader";
 
 export const meta = {
 	title: "Page Header",
@@ -121,6 +121,12 @@ Use underneath the breadcrumb inside a container and above the main content. Use
 ```
 </CH.Code>
 </Example>
+
+### Full width variant
+
+<FullWidthHeader />
+
+TODO: Add some text
 
 ## Accessibility
 
