--- a/docs/pages/components/page-header.mdx
+++ b/docs/pages/components/page-header.mdx
@@ -1,6 +1,6 @@
 import { ComponentLayout } from "components/layouts/ComponentLayout";
 import { Example } from "components/examples/Example";
-import { DefaultHeader, PreHeader, LeadHeader, MetadataHeader, CTAHeader, FullWidthHeader } from "components/examples/PageHeader";
+import { DefaultHeader, PreHeader, LeadHeader, MetadataHeader, CTAHeader, FullWidthLightHeader, FullWidthDarkHeader, HeaderWithBreadcrumbs, HeaderWithDescription } from "components/examples/PageHeader";
 
 export const meta = {
 	title: "Page Header",
@@ -122,11 +122,112 @@ Use underneath the breadcrumb inside a container and above the main content. Use
 </CH.Code>
 </Example>
 
-### Full width variant
+### Header with description
 
-<FullWidthHeader />
+<Example>
+<HeaderWithDescription />
 
-TODO: Add some text
+<CH.Code>
+```js React
+<PageHeader
+	heading="Header with description"
+	description="I am a description"
+/>
+```
+```html HTML
+<div class="page-header" data-component="page-header">
+  <h1 class="page-header__heading">Header with description</h1>
+  <div class="page-header__description">I am a description</div>
+</div>
+```
+</CH.Code>
+</Example>
+
+### Header with breadcrumbs
+
+<Example>
+<HeaderWithBreadcrumbs />
+
+<CH.Code>
+```js React
+<PageHeader
+	heading="Header with breadcrumbs"
+	breadcrumbs={addBreadcrumbsComponentHere}
+/>
+```
+```html HTML
+<div class="page-header" data-component="page-header">
+  <div class="page-header__breadcrumbs">
+    <nav
+      aria-label="Breadcrumbs"
+      role="navigation"
+      data-component="breadcrumbs"
+    >
+      <ol class="breadcrumbs">
+        <li class="breadcrumbs__crumb">
+          <a href="https://www.nice.org.uk/">Home</a>
+        </li>
+        <li class="breadcrumbs__crumb">
+          <a href="https://www.nice.org.uk/guidance">NICE guidance</a>
+        </li>
+        <li class="breadcrumbs__crumb"><span>Published</span></li>
+      </ol>
+    </nav>
+  </div>
+  <h1 class="page-header__heading">Header with breadcrumbs</h1>
+</div>
+```
+</CH.Code>
+</Example>
+
+### Full width light variant
+
+
+<Example>
+<FullWidthLightHeader />
+<CH.Code>
+```js React
+<PageHeader
+	heading="I am a full width light header!"
+	variant="fullWidthLight"
+/>
+```
+```html HTML
+<div
+  class="page-header page-header--full-width-light"
+  data-component="page-header"
+>
+  <div class="container">
+    <h1 class="page-header__heading">I am a full width light header!</h1>
+  </div>
+</div>
+```
+</CH.Code>
+</Example>
+
+### Full width dark variant
+
+<Example>
+<FullWidthDarkHeader />
+<CH.Code>
+```js React
+<PageHeader
+	heading="I am a full width dark header!"
+	variant="fullWidthDark"
+/>
+```
+```html HTML
+<div
+  class="page-header page-header--full-width-dark"
+  data-component="page-header"
+>
+  <div class="container">
+    <h1 class="page-header__heading">I am a full width dark header!</h1>
+  </div>
+</div>
+```
+</CH.Code>
+</Example>
 
 ## Accessibility
 
