--- a/docs/pages/components/page-header.mdx
+++ b/docs/pages/components/page-header.mdx
@@ -1,6 +1,6 @@
 import { ComponentLayout } from "components/layouts/ComponentLayout";
 import { Example } from "components/examples/Example";
-import { DefaultHeader, PreHeader, LeadHeader, MetadataHeader, CTAHeader, FullWidthLightHeader, FullWidthDarkHeader, HeaderWithBreadcrumbs, HeaderWithDescription } from "components/examples/PageHeader";
+import { DefaultHeader, PreHeader, LeadHeader, MetadataHeader, CTAHeader, FullWidthLightHeader, FullWidthDarkHeader, HeaderWithBreadcrumbs, HeaderWithDescription, HeaderWithSecondSection } from "components/examples/PageHeader";
 
 export const meta = {
 	title: "Page Header",
@@ -223,6 +223,49 @@ Use underneath the breadcrumb inside a container and above the main content. Use
 >
   <div class="container">
     <h1 class="page-header__heading">I am a full width dark header!</h1>
+  </div>
+</div>
+```
+</CH.Code>
+</Example>
+
+### Header with second section
+
+<Example>
+<HeaderWithSecondSection />
+<CH.Code>
+```js React
+<PageHeader
+	heading="There's a second section here!"
+	variant="fullWidthLight"
+	secondSection={secondSectionComponent}
+/>
+```
+```html HTML
+<div
+  class="page-header page-header--full-width-light"
+  data-component="page-header"
+>
+  <div class="container">
+    <div class="grid">
+      <div data-g="12 md:9" data-component="grid-item">
+        <h1 class="page-header__heading">There's a second section here!</h1>
+      </div>
+      <div
+        data-g="12 md:3"
+        data-component="grid-item"
+        class="page-header__second-section"
+      >
+        <aside>
+          <h3>I am a second section</h3>
+          <ol>
+            <li>One</li>
+            <li>Two</li>
+            <li>Three</li>
+          </ol>
+        </aside>
+      </div>
+    </div>
   </div>
 </div>
 ```
