NDS-402 page header update (#321)
* Add new variant of page header

* Publish

 - @nice-digital/design-system@5.0.16-alpha.0
 - @nice-digital/nds-a-z-list@4.0.8-alpha.0
 - @nice-digital/nds-action-banner@4.0.7-alpha.0
 - @nice-digital/nds-alert@4.0.7-alpha.0
 - @nice-digital/nds-alphabet@3.0.7-alpha.0
 - @nice-digital/nds-breadcrumbs@4.0.7-alpha.0
 - @nice-digital/nds-button@4.0.9-alpha.0
 - @nice-digital/nds-card@4.0.8-alpha.0
 - @nice-digital/nds-checkbox@4.0.7-alpha.0
 - @nice-digital/nds-column-list@4.0.7-alpha.0
 - @nice-digital/nds-container@4.0.7-alpha.0
 - @nice-digital/nds-core@4.0.7-alpha.0
 - @nice-digital/nds-enhanced-pagination@4.0.7-alpha.0
 - @nice-digital/nds-filters@5.0.12-alpha.0
 - @nice-digital/nds-form-group@4.0.7-alpha.0
 - @nice-digital/nds-full-bleed@4.0.7-alpha.0
 - @nice-digital/nds-grid@4.0.10-alpha.0
 - @nice-digital/nds-hero@4.0.7-alpha.0
 - @nice-digital/nds-horizontal-nav@4.0.7-alpha.0
 - @nice-digital/nds-in-page-nav@4.0.8-alpha.0
 - @nice-digital/nds-input@4.0.7-alpha.0
 - @nice-digital/nds-maintain-ratio@4.0.7-alpha.0
 - @nice-digital/nds-page-header@4.0.7-alpha.0
 - @nice-digital/nds-panel@4.0.7-alpha.0
 - @nice-digital/nds-phase-banner@4.0.7-alpha.0
 - @nice-digital/nds-prev-next@4.0.7-alpha.0
 - @nice-digital/nds-radio@4.0.7-alpha.0
 - @nice-digital/nds-simple-pagination@4.0.7-alpha.0
 - @nice-digital/nds-stacked-nav@4.0.7-alpha.0
 - @nice-digital/nds-table@4.0.7-alpha.0
 - @nice-digital/nds-tabs@4.0.7-alpha.0
 - @nice-digital/nds-tag@4.0.7-alpha.0
 - @nice-digital/nds-textarea@4.0.7-alpha.0
 - @nice-digital/design-system-docs@1.0.17-alpha.0

* NDS-402 Complete page header updates

* NDS-402 Add second section to page header

---------

Co-authored-by: Chris Barker <chris.barker@nice.org.uk>

--- a/docs/pages/components/page-header.mdx
+++ b/docs/pages/components/page-header.mdx
@@ -1,6 +1,6 @@
 import { ComponentLayout } from "components/layouts/ComponentLayout";
 import { Example } from "components/examples/Example";
-import { DefaultHeader, PreHeader, LeadHeader, MetadataHeader, CTAHeader } from "components/examples/PageHeader";
+import { DefaultHeader, PreHeader, LeadHeader, MetadataHeader, CTAHeader, FullWidthLightHeader, FullWidthDarkHeader, HeaderWithBreadcrumbs, HeaderWithDescription, HeaderWithSecondSection } from "components/examples/PageHeader";
 
 export const meta = {
 	title: "Page Header",
@@ -117,6 +117,156 @@ Use underneath the breadcrumb inside a container and above the main content. Use
       Do something
     </button>
   </p>
+</div>
+```
+</CH.Code>
+</Example>
+
+### Header with description
+
+<Example>
+<HeaderWithDescription />
+
+<CH.Code>
+```js React
+<PageHeader
+	heading="Header with description"
+	description="I am a description"
+/>
+```
+```html HTML
+<div class="page-header" data-component="page-header">
+  <h1 class="page-header__heading">Header with description</h1>
+  <div class="page-header__description">I am a description</div>
+</div>
+```
+</CH.Code>
+</Example>
+
+### Header with breadcrumbs
+
+<Example>
+<HeaderWithBreadcrumbs />
+
+<CH.Code>
+```js React
+<PageHeader
+	heading="Header with breadcrumbs"
+	breadcrumbs={addBreadcrumbsComponentHere}
+/>
+```
+```html HTML
+<div class="page-header" data-component="page-header">
+  <div class="page-header__breadcrumbs">
+    <nav
+      aria-label="Breadcrumbs"
+      role="navigation"
+      data-component="breadcrumbs"
+    >
+      <ol class="breadcrumbs">
+        <li class="breadcrumbs__crumb">
+          <a href="https://www.nice.org.uk/">Home</a>
+        </li>
+        <li class="breadcrumbs__crumb">
+          <a href="https://www.nice.org.uk/guidance">NICE guidance</a>
+        </li>
+        <li class="breadcrumbs__crumb"><span>Published</span></li>
+      </ol>
+    </nav>
+  </div>
+  <h1 class="page-header__heading">Header with breadcrumbs</h1>
+</div>
+```
+</CH.Code>
+</Example>
+
+### Full width light variant
+
+
+<Example>
+<FullWidthLightHeader />
+<CH.Code>
+```js React
+<PageHeader
+	heading="I am a full width light header!"
+	variant="fullWidthLight"
+/>
+```
+```html HTML
+<div
+  class="page-header page-header--full-width-light"
+  data-component="page-header"
+>
+  <div class="container">
+    <h1 class="page-header__heading">I am a full width light header!</h1>
+  </div>
+</div>
+```
+</CH.Code>
+</Example>
+
+### Full width dark variant
+
+<Example>
+<FullWidthDarkHeader />
+<CH.Code>
+```js React
+<PageHeader
+	heading="I am a full width dark header!"
+	variant="fullWidthDark"
+/>
+```
+```html HTML
+<div
+  class="page-header page-header--full-width-dark"
+  data-component="page-header"
+>
+  <div class="container">
+    <h1 class="page-header__heading">I am a full width dark header!</h1>
+  </div>
+</div>
+```
+</CH.Code>
+</Example>
+
+### Header with second section
+
+<Example>
+<HeaderWithSecondSection />
+<CH.Code>
+```js React
+<PageHeader
+	heading="There's a second section here!"
+	variant="fullWidthLight"
+	secondSection={secondSectionComponent}
+/>
+```
+```html HTML
+<div
+  class="page-header page-header--full-width-light"
+  data-component="page-header"
+>
+  <div class="container">
+    <div class="grid">
+      <div data-g="12 md:9" data-component="grid-item">
+        <h1 class="page-header__heading">There's a second section here!</h1>
+      </div>
+      <div
+        data-g="12 md:3"
+        data-component="grid-item"
+        class="page-header__second-section"
+      >
+        <aside>
+          <h3>I am a second section</h3>
+          <ol>
+            <li>One</li>
+            <li>Two</li>
+            <li>Three</li>
+          </ol>
+        </aside>
+      </div>
+    </div>
+  </div>
 </div>
 ```
 </CH.Code>
